# OvP

./: .gitattributes  .gitignore  AI for OvP.ipynb  Preprocessing.py  README.md  Voorbeeld zoektermen.txt  app.py  app2.py  build_index.py  keyword_extractions.ipynb  main.py  merge.py  offset_count.txt  pyproject.toml  scraper.py  simple_app.py  specialty_extraction.ipynb  testing.py
