[project]
name = "ovp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "playwright>=1.57.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
]
